<resources>
    // Main Activity
    <string name="app_name">MyFavoriteThings</string>
    <string name="back_button">Back</string>
    <string name="ok_button_title">OK</string>
    <string name="search_button_title">Search</string>
    <string name="filter_button_title">Filter</string>
    <string name="edit_option_title">Edit</string>
    <string name="delete_option_title">Delete</string>

    // Photo Activity
    <string name="capture_button_text">Take Photo</string>

    // Add Card
    <string name="add_card_title">Card Editor</string>
    <string name="add_card_menu">Add Card</string>
    <string name="card_name_hint">Name</string>

    // List Manager
    <string name="manage_lists_title">Manage Lists</string>
    <string name="add_list_button_text">Add New List</string>
    <string name="edit_button">Edit</string>

    // Edit List
    <string name="add_list_title">Edit List</string>
    <string name="list_name_hint">List Name</string>
    <string name="delete_button">Delete</string>
    <string name="tags_hint">Add Tags</string>

    // Filter
    <string name="filter_tags_text">Tags</string>
    <string name="filter_fragment_title">Filters</string>
    <string name="dialog_delete_list">Are you sure you want to delete this list? All data will be lost.</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>
    <string name="default_list_name">My List</string>
    <string name="grade_header">Rating</string>
    <string name="photo_button_description">Add Photo to Card</string>
    <string name="image_view_description">Card Image</string>
    <string name="tags_header">Tags</string>
    <string name="filter_ratings_text">Ratings</string>
    <string name="filter_ratings_toggle_button_text"> </string>
    <string name="filter_name_text">Name</string>
</resources>