<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:menu="@menu/filter_menu"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title="@string/filter_fragment_title">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/filter_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="8dp"
                    android:text="@string/filter_tags_text"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp">

                </TextView>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filterChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="8dp">

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="8dp"
                    android:text="@string/filter_ratings_text"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp"

                    android:layout_alignParentStart="true">

                </TextView>

                <ToggleButton
                    android:id="@+id/filterRatingButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/filter_switch_drawable"
                    android:textOff="@string/filter_ratings_toggle_button_text"
                    android:textOn="@string/filter_ratings_toggle_button_text">

                </ToggleButton>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>