<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:menu="@menu/add_card_menu"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title="@string/add_list_title">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/list_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/tags_hint"

            app:endIconDrawable="@drawable/ic_baseline_add_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp">

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</layout>